# docs/openapi.json
@@ -2449,6 +2449,12 @@
                     },
                     "mfa_enrollment_required": {
                       "type": "boolean"
+                    },
+                    "permissions": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
                     }
                   },
                   "required": [
@@ -2456,7 +2462,8 @@
                     "organizations",
                     "active_organization_id",
                     "mfa",
-                    "mfa_enrollment_required"
+                    "mfa_enrollment_required",
+                    "permissions"
                   ],
                   "additionalProperties": false
                 }
@@ -2957,6 +2964,12 @@
                     },
                     "mfa_enrollment_required": {
                       "type": "boolean"
+                    },
+                    "permissions": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
                     }
                   },
                   "required": [
@@ -2964,7 +2977,8 @@
                     "organizations",
                     "active_organization_id",
                     "mfa",
-                    "mfa_enrollment_required"
+                    "mfa_enrollment_required",
+                    "permissions"
                   ],
                   "additionalProperties": false
                 }
@@ -3154,6 +3168,12 @@
                     },
                     "mfa_enrollment_required": {
                       "type": "boolean"
+                    },
+                    "permissions": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
                     }
                   },
                   "required": [
@@ -3161,7 +3181,8 @@
                     "organizations",
                     "active_organization_id",
                     "mfa",
-                    "mfa_enrollment_required"
+                    "mfa_enrollment_required",
+                    "permissions"
                   ],
                   "additionalProperties": false
                 }
@@ -4053,6 +4074,12 @@
                     },
                     "mfa_enrollment_required": {
                       "type": "boolean"
+                    },
+                    "permissions": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
                     }
                   },
                   "required": [
@@ -4060,7 +4087,8 @@
                     "organizations",
                     "active_organization_id",
                     "mfa",
-                    "mfa_enrollment_required"
+                    "mfa_enrollment_required",
+                    "permissions"
                   ],
                   "additionalProperties": false
                 }
@@ -4373,6 +4401,12 @@
                     },
                     "mfa_enrollment_required": {
                       "type": "boolean"
+                    },
+                    "permissions": {
+                      "type": "array",
+                      "items": {
+                        "type": "string"
+                      }
                     }
                   },
                   "required": [
@@ -4380,7 +4414,8 @@
                     "organizations",
                     "active_organization_id",
                     "mfa",
-                    "mfa_enrollment_required"
+                    "mfa_enrollment_required",
+                    "permissions"
                   ],
                   "additionalProperties": false
                 }
